# ai-business-debate

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
debate/: __init__.py  cli.py  config.py  context.py  orchestrator.py
debate/llm/: __init__.py  anthropic.py  client.py  dry_run.py  fake.py
debate/prompts/: __init__.py  phase1.py  phase2.py  phase3.py  phase4.py  phase5.py  system.py
debate/renderers/: __init__.py  markdown.py
debate/roles/: __init__.py  automation_architect.py  base.py  bootstrapper.py  devils_advocate.py  market_analyst.py  moderator.py
debate/schemas/: __init__.py  common.py  debate.py  ideas.py  scorecard.py  state.py  verdict.py  votes.py
debate/storage/: __init__.py  checkpoint.py
debate/validators/: __init__.py  evidence.py  gates.py  phase.py
tests/: conftest.py  test_checkpoint.py  test_context.py  test_orchestrator.py  test_phase_invariants.py  test_recovery.py  test_renderers.py  test_resume_fidelity.py  test_schemas.py  test_trustworthiness.py  test_validators.py
