[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-business-debate"
version = "0.1.0"
description = "Deterministic orchestration engine for structured multi-agent AI business idea debates"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
debate = "debate.cli:main"

[tool.setuptools.packages.find]
include = ["debate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
